@@ -1,3 +1,7 @@
+2003-08-12  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tkMacOSXMenu.c: fixed C99'ism that breaks gcc 2.95.
+
 2003-07-21  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	*** 8.4.4 TAGGED FOR RELEASE ***
